[package]
name = "bd"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.1"
serde_json = "1.0.86"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.21.2", features = ["full"] }